- Added a new option to prevent talking users from moving to the top of users list
- Added the ability to leave channels
- Added the ability to set status messages
- Added the ability to control user's transmissions
- Option to automatically join root channel in preferences
- Announce who is channel operator
- Announce who is selected for moving to other channel
- Ability to play sound when voice activation is toggled
- Ability to play sound for intercept subscription toggled
- Ability to use Text-To-Speech to announce transmission changes
- Ability to use Text-To-Speech to announce subscription changes
- Fixed bug where user's status message is not announced when away
- Minimum supported is now Android v7.0 (Nougat)
iOS Client
- Use VoiceOver to announce TTS events for screen reader users
Server
- Fixed security vulnerability where users could accidentally become channel operators if a channel ID was reused

Version 5.18, 2025/05/05
Default Qt Client
- Media tab in main window for controlling media file streaming
- Support "{username}" variable for majority of TTS and status events related to user action
- Indication when user is sharing desktop in channel list
- Ability to restore all custom Text-To-Speech and status bar events to default values
- All byte sizes converted to local format
- Option to use TeamTalk Sound Output device for default sound event playback mode
- Option to choose bitween text or emoji for user and channel info in channel list
- Last login time shown in "User Accounts" dialog
- Ability to sort by "Last Login Time" in "User Accounts" dialog
- Ability to send toast notifications on Linux and Windows
- Ability to change chat history to list view in "Preferences" dialog
- Improved "Server Properties" and "Channel" dialog accessibility
- Nickname and Last Joined Channel are now stored in .tt file
- WebRTC updated from r4332 to r6818
- Qt updated to 6.9.0 on macOS and Windows
- OPUS updated to v1.5.2
- Ability to custom chat templates