@@ -125,12 +125,6 @@
         </activity>
 
         <activity
-            android:name=".AudioCodecActivity"
-            android:label="@string/title_activity_audio_codec"
-            android:exported="false">
-        </activity>
-
-        <activity
             android:name=".OnlineUsersActivity"
             android:label="@string/online_users"
             android:parentActivityName=".MainActivity">
